--- a/cumplefelipe.html
+++ b/cumplefelipe.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>Feliz Cumpleaños Felipe!!🥳</h1>
-        <p class="subtitle">Sé que crecer puede ser aterrorizante, pero no hay porqué temer
+        <p class="subtitle">Sé que crecer puede ser aterrorizante, pero no hay porqué temer,
 		cuando más sabemos de algo, menos miedo le tenemos y estoy seguro de que lo vas a hacer genial...</p>
 		<p>En este día especial te hago la promesa de que estaré siempre para vos, 
-		estemos cerca o no, hablemos o no, siempre contarás conmigo y espero puedas cumplir todos los 
+		estemos cerca o no, hablemos o no, estemos bien o no, siempre contarás conmigo y espero puedas cumplir todos los 
 		sueños que un día me contaste. Te regalo esto para que tengas una parte mía contigo, creo que te gusta la astrología. Cuídate mucho mi niño💗✨</p>
 		<br><br>
 		<span style="float: right;">Mau🫶🏻</span>
