--- a/cumplefelipe.html
+++ b/cumplefelipe.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div class="container">
+    <audio autoplay loop volume="1.0"> <!-- Reproducción automática y volumen al 100% -->
+        <source src="NASA.mp3" type="audio/mpeg"> <!-- Nombre del archivo de audio -->
+        Your browser does not support the audio element.
+    </audio>
+   <div class="container">
         <h1>Feliz Cumpleaños Felipe!!🥳</h1>
         <p class="subtitle">Sé que crecer puede ser aterrorizante, pero no hay porqué temer,
 		cuando más sabemos de algo, menos miedo le tenemos y estoy seguro de que lo vas a hacer genial...</p>
