--- a/cumplefelipe.html
+++ b/cumplefelipe.html
@@ -12,8 +12,10 @@
     </audio>
    <div class="container">
         <h1>Feliz Cumpleaños Felipe!!🥳</h1>
-        <p class="subtitle">Sé que crecer puede ser aterrorizante, pero no hay porqué temer,
-		cuando más sabemos de algo, menos miedo le tenemos y estoy seguro de que lo vas a hacer genial...</p>
+        <p class="subtitle">Sé que a veces el cumpleaños puede traer consigo un cúmulo de emociones, incluso un poco
+		de miedo o ansiedad por el paso del tiempo. Pero quiero recordarte que cada año que sumas es una 
+		oportunidad para crecer, aprender y disfrutar de la vida de nuevas maneras, pero no hay porqué temer,
+		cuando más nos enfrentamos a algo, menos miedo le tenemos y estoy seguro de que lo vas a hacer genial...</p>
 		<p>En este día especial te hago la promesa de que estaré siempre para vos, 
 		estemos cerca o no, hablemos o no, estemos bien o no, siempre contarás conmigo y espero puedas cumplir todos los 
 		sueños que un día me contaste. Te regalo esto para que tengas una parte mía contigo, creo que te gusta la astrología. Cuídate mucho mi niño💗✨</p>
