--- a/cumplefelipe.html
+++ b/cumplefelipe.html
@@ -18,11 +18,11 @@
 		cuando más nos enfrentamos a algo, menos miedo le tenemos y estoy seguro de que lo vas a hacer genial...</p>
 		<p>En este día especial te hago la promesa de que estaré siempre para vos, 
 		estemos cerca o no, hablemos o no, estemos bien o no, siempre contarás conmigo y espero puedas cumplir todos los 
-		sueños que un día me contaste. Te regalo esto para que tengas una parte mía contigo, creo que te gusta la astronomía. Cuídate mucho mi niño💗✨</p>
+		sueños que un día me contaste. Te regalo esto para que tengas una parte mía contigo, creo que te gusta la astronomía. Cuídate muchísimo mi niño💗✨</p>
 		<br>
 	  <a href="https://youtu.be/6mWy77zubbM?feature=shared">Aprende a usar la luna acá</a> 
 	   <br><br>
-		<span style="float: right;">Mau🫶🏻</span>
+		<span style="float: right;">Te amo siempre, Mau🫶🏻</span>
 		</p>
     </div>
 </body>
